dhall/tests/type-errors/unit/MergeEmptyNeedsDirectAnnotation2.txt
Type error: error: MergeEmptyNeedsAnnotation
 --> <current file>:1:26
  |
1 | \(x: <>) -> let y: Bool = merge {=} x in 1
  |                           ^^^^^^^^^^^ MergeEmptyNeedsAnnotation
  |
